--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 :root{
-    --dark-color: hsl(24, 38%, 26%);
-    --medium-color: hsl(28, 28%, 65%);
+    --dark-color: red;
+    --medium-color: blue;
     --light-color: hsl(25, 38%, 91%);
     --lighter-color:  hsl(20, 29%, 97%);
     --invalid-form-color: rgb(252, 106, 106);
