--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 :root{
-    --dark-color: brown;
+    --dark-color: hsl(24, 38%, 26%);
     --medium-color: hsl(28, 28%, 65%);
     --light-color: hsl(25, 38%, 91%);
     --lighter-color:  hsl(20, 29%, 97%);
@@ -25,8 +25,6 @@
 main{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20em, 50%));
-    /* Die areas überschreiben die columns. 
-    Eines von beiden ist überflüssig. */
     grid-template-areas: 
             "picture1 text1"
             "text2 text2"
@@ -147,8 +145,6 @@ footer{
     padding: 2em 4em;
     margin-bottom: 5em;
     background-color: var(--light-color);
-    /* Die folgende Positionierung ist sehr spezifisch. 
-    Das wird nicht in jedem viewport passen. Vermeiden Sie so etwas. */
     position: relative;
     right: 10em;
     animation: slideLversetzt 2s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1;
@@ -360,7 +356,7 @@ und nicht in main-script.js über ein Klasse */
 
 @media (max-width: 800px){
     main{
-        /* grid-template-columns: 1fr;
+        grid-template-columns: 1fr;
         grid-template-areas:
                 "picture1"
                 "text1"
@@ -369,10 +365,7 @@ und nicht in main-script.js über ein Klasse */
                 "text3"
                 "picture2"
                 "text4"
-                "table"; */
-
-        /* Das geht viel kürzer mit der folgenden Anweisung. */
-        display: block;
+                "table";
     }
 
     h1{
